welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:63: error: not found: type Couleur
def faireV(c:Couleur){
             ^