welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
/*def faireV(c:Color){
  setCouleurBrosse(c)
  leveBrosse()
  baisseBrosse()
  avance()
  gauche()
  avance()
  leveBrosse()
  baisseBrosse()
  recule()
  droite()
  avance()
  leveBrosse()
  baisseBrosse()
  avance()
  avance()
  gauche()
  avance()
  avance()
  
}*/
def faireV(c:Color){
  setCouleurBrosse(c)
  leveBrosse()
  baisseBrosse()
  avance()
  gauche()
  avance()
  leveBrosse()
  baisseBrosse()
  recule()
  droite()
  avance()
  leveBrosse()
  baisseBrosse()
  avance()
  avance()
  gauche()
  avance()
  avance()
  
}

def motif() {
  //avance()
	//avance()
  faireV(Color.YELLOW)
  //avance()
  //avance()
  faireV(Color.RED)
  //avance()
  //avance()
  faireV(Color.BLUE)
  //avance()
  //avance()
  faireV(Color.GREEN)
}





def faireV(c:Couleur){
  setCouleurBrosse(c)
  leveBrosse()
  baisseBrosse()
  avance()
  gauche()
  avance()
  leveBrosse()
  baisseBrosse()
  recule()
  droite()
  avance()
  leveBrosse()
  baisseBrosse()
  avance()
  avance()
  gauche()
  avance()
  avance()
  
}









override def run() {
  motif()
}